--- a/client-react/src/components/account/style.css
+++ b/client-react/src/components/account/style.css
@@ -4,10 +4,14 @@
   margin: 20px auto;
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
+  box-shadow: 3px 3px 10px #cdeac0;
+  padding-bottom: 15px;
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .leftForm {
-  width: 75%;
+  width: 65%;
 }
 
 .rightForm {
@@ -15,6 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  margin: 10px 10px 0 0;
 }
 
 .rightLink {
