--- a/client-react/src/components/contribution/style.css
+++ b/client-react/src/components/contribution/style.css
@@ -10,6 +10,7 @@
   height: 200px;
   width: 300px;
   box-shadow: 3px 3px 10px #cdeac0;
+  padding: 5px;
 }
 
 .buttonTxt {
@@ -17,6 +18,27 @@
   margin-left: 7px;
 }
 .buttonBox {
-  height: 40px;
+  height: 45px;
   box-shadow: 3px 3px 10px #cdeac0;
+}
+
+.login {
+  width: 80%;
+  height: 400px;
+  margin: 10px auto;
+  background: rgba(255, 255, 255, 0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  box-shadow: 3px 3px 10px #cdeac0;
+}
+
+.title {
+  align-self: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.loginForm {
+  width: 80%;
+  margin: 0 auto;
 }
